@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worldly Discus joins Team A\n",
+      "Create an avatar showing a Worldly Discus with a white background.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -85,30 +93,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>Probable Herring</td>\n",
-       "      <td>MPE</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>102</th>\n",
        "      <td>Worthy Aurochs</td>\n",
@@ -205,6 +189,30 @@
        "      <td>0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>Worldly Discus</td>\n",
+       "      <td>MPA</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 33 columns</p>\n",
@@ -212,44 +220,44 @@
       ],
       "text/plain": [
        "                nickname institute  confirmation_status  is_postdoc  \\\n",
-       "101     Probable Herring       MPE                 True        True   \n",
        "102       Worthy Aurochs       MPA                 True        True   \n",
        "103  Miserable Alligator       MPE                 True       False   \n",
        "104     Gripping Penguin       MPE                 True        True   \n",
        "105     Infamous Sawfish       MPE                 True        True   \n",
+       "106       Worldly Discus       MPA                 True       False   \n",
        "\n",
        "     avail_monday  avail_tuesday  avail_thursday  avail_friday  \\\n",
-       "101          True          False           False         False   \n",
        "102         False          False           False          True   \n",
        "103         False          False            True          True   \n",
        "104          True          False            True          True   \n",
        "105          True           True           False         False   \n",
+       "106         False           True            True          True   \n",
        "\n",
        "     wants_ping_pong  ping_pong  ...  capture_the_flag  wants_spikeball  \\\n",
-       "101            False      False  ...             False            False   \n",
        "102            False      False  ...             False            False   \n",
        "103             True       True  ...             False            False   \n",
        "104             True       True  ...              True             True   \n",
        "105            False      False  ...             False            False   \n",
+       "106             True       True  ...             False            False   \n",
        "\n",
        "     spikeball  wants_beer_pong  beer_pong  wants_foosball  foosball  \\\n",
-       "101      False            False      False           False     False   \n",
        "102      False            False      False            True      True   \n",
        "103      False             True       True           False     False   \n",
        "104       True             True       True            True      True   \n",
        "105      False            False      False           False     False   \n",
+       "106      False            False      False           False     False   \n",
        "\n",
        "     num_sports  num_sports_not_avail  late_entry  \n",
-       "101           1                     0        True  \n",
        "102           1                     0        True  \n",
        "103           2                     0        True  \n",
        "104           8                     0        True  \n",
        "105           2                     0        True  \n",
+       "106           1                     0        True  \n",
        "\n",
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +279,7 @@
     "                \"Miserable Alligator\": \"A\",\n",
     "                \"Gripping Penguin\": \"B\",\n",
     "                \"Infamous Sawfish\": \"C\",\n",
+    "                \"Worldly Discus\": \"A\",\n",
     "                  }\n",
     "\n",
     "for _, player in late.iterrows():\n",
@@ -284,7 +293,7 @@
     "        team_to_join.add_player(player, register_as_reserve=True)\n",
     "        print(f\"{name} joins {team_to_join.name}\")\n",
     "        generate_all_images([name])\n",
-    "# save_resized_animal_images(200)\n",
+    "save_resized_animal_images(200)\n",
     "\n",
     "def _rewrite_teams():\n",
     "    old_df = hf.get_players()\n",
@@ -310,9 +319,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team C\n",
+      "Moving 'Loving Bichir' (Team C) from 'R' to '1' in basketball.\n"
+     ]
+    }
+   ],
    "source": [
     "# df.loc[\"Fine Oyster\", \"subteam_football\"] = \"R\"\n",
     "# df.loc[\"Lone Rhinoceros\", \"subteam_football\"] = \"R\"\n",
@@ -342,7 +360,7 @@
     "\n",
     "# hf.get_players().set_index(\"nickname\").loc[\"Qualified Buffalo\"]\n",
     "# set_player_subteam(\"Rewarding Ermine\", \"capture_the_flag\", \"\")\n",
-    "# set_player_subteam(\"Motherly Woodpecker\", \"running_sprints\", \"R\")\n",
+    "set_player_subteam(\"Loving Bichir\", \"basketball\", \"1\")\n",
     "\n",
     "# hf.get_players().set_index(\"nickname\").loc[\"Excited Rabbit\"]\n"
    ]
@@ -404,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rewritten the time for ping_pongC: 05A: 05 to 16:30 (Friday).\n"
+      "Rewritten the time for ping_pongB: 14C: 16 to 13:30 (Tuesday).\n"
      ]
     }
    ],
@@ -437,7 +455,7 @@
     "        if num_conflicts == 0:\n",
     "            print(\"No conflicts found.\")\n",
     "\n",
-    "reschedule_match_to_new_time(\"ping_pongC: 05A: 05\", datetime(2024, 5, 3, 16, 30))\n",
+    "reschedule_match_to_new_time(\"ping_pongB: 14C: 16\", datetime(2024, 4, 30, 13, 30))\n",
     "df = hf.turn_series_list_to_dataframe([m.as_series for m in hf.ALL_MATCHES])\n",
     "# df[df[\"sport\"] == \"ping_pong\"]\n"
    ]
