@@ -68,7 +68,7 @@ foosball,C: 3,A: 3,1,Friday,20:15,,,2024-05-03 20:15:00,900,C: 3,A: 3,foosballC:
 running_sprints,A: 1,B: 1,Main pitch,Monday,17:30,,,2024-04-29 17:30:00,4500,A: 1,B: 1,running_sprintsA: 1B: 1
 running_sprints,A: 1,C: 1,Main pitch,Monday,17:30,,,2024-04-29 17:30:00,4500,A: 1,C: 1,running_sprintsA: 1C: 1
 running_sprints,B: 1,C: 1,Main pitch,Monday,17:30,,,2024-04-29 17:30:00,4500,B: 1,C: 1,running_sprintsB: 1C: 1
-ping_pong,A: Honorable Pangolin,B: Hasty Emu,1,Monday,17:45,,,2024-04-29 17:45:00,1800,A: 12,B: 04,ping_pongA: 12B: 04
+ping_pong,A: Worldly Discus,B: Hasty Emu,3,Tuesday,17:45,,,2024-04-30 17:45:00,1800,A: 18,B: 04,ping_pongA: 18B: 04
 ping_pong,A: Anchored Panther,B: Flamboyant Lungfish,2,Tuesday,18:45,,,2024-04-30 18:45:00,1800,A: 10,B: 05,ping_pongA: 10B: 05
 ping_pong,B: Hasty Emu,C: Minty Possum,1,Monday,19:15,,,2024-04-29 19:15:00,1800,B: 04,C: 07,ping_pongB: 04C: 07
 ping_pong,A: Magnificent Barracuda,B: Thankful Kakapo,2,Monday,19:15,,,2024-04-29 19:15:00,1800,A: 07,B: 06,ping_pongA: 07B: 06
@@ -95,7 +95,7 @@ ping_pong,C: Well-documented Dodo,A: Anchored Panther,2,Thursday,17:45,,,2024-05
 ping_pong,C: Qualified Buffalo,A: Nutty Sheep,1,Thursday,19:45,,,2024-05-02 19:45:00,1800,C: 14,A: 16,ping_pongC: 14A: 16
 ping_pong,B: Trivial Uguisu,C: Failing Muskrat,2,Thursday,19:45,,,2024-05-02 19:45:00,1800,B: 07,C: 06,ping_pongB: 07C: 06
 ping_pong,B: Jumpy Catfish,C: Surprised Tetra,1,Thursday,20:15,,,2024-05-02 20:15:00,1800,B: 11,C: 03,ping_pongB: 11C: 03
-ping_pong,B: Animated Yak,C: Pushy Bulldog,2,Thursday,20:15,,,2024-05-02 20:15:00,1800,B: 14,C: 16,ping_pongB: 14C: 16
+ping_pong,B: Animated Yak,C: Pushy Bulldog,2,Tuesday,13:30,,,2024-04-30 13:30:00,1800,B: 14,C: 16,ping_pongB: 14C: 16
 ping_pong,A: Lovely Heron,B: Striped Himalayan,1,Thursday,20:45,,,2024-05-02 20:45:00,1800,A: 01,B: 08,ping_pongA: 01B: 08
 ping_pong,C: Kindly Clownfish,A: Trifling Tarpon,2,Thursday,20:45,,,2024-05-02 20:45:00,1800,C: 01,A: 08,ping_pongC: 01A: 08
 ping_pong,B: Ill-fated Meerkat,C: Kindly Clownfish,1,Friday,17:45,,,2024-05-03 17:45:00,1800,B: 13,C: 01,ping_pongB: 13C: 01
