@@ -105,3 +105,4 @@ Worthy Aurochs,MPA,True,True,False,False,False,True,False,False,False,False,Fals
 Miserable Alligator,MPE,True,False,False,False,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,2,0,True
 Gripping Penguin,MPE,True,True,True,False,True,True,True,True,True,True,True,True,True,True,False,False,False,False,False,False,True,True,True,True,True,True,True,True,8,0,True
 Infamous Sawfish,MPE,True,True,True,True,False,False,False,False,False,False,False,False,True,True,False,False,True,True,False,False,False,False,False,False,False,False,False,False,2,0,True
+Worldly Discus,MPA,True,False,False,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,1,0,True
