@@ -1,8 +1,8 @@
 nickname,institute,is_postdoc,avail_monday,avail_tuesday,avail_thursday,avail_friday,wants_basketball,basketball,wants_running_sprints,running_sprints,wants_volleyball,volleyball,wants_chess,chess,wants_football,football,wants_tennis,tennis,wants_capture_the_flag,capture_the_flag,wants_spikeball,spikeball,wants_beer_pong,beer_pong,wants_foosball,foosball,wants_ping_pong,ping_pong,num_sports,num_sports_not_avail,late_entry,Team,subteam_basketball,subteam_running_sprints,subteam_volleyball,subteam_chess,subteam_football,subteam_tennis,subteam_capture_the_flag,subteam_spikeball,subteam_beer_pong,subteam_foosball,subteam_ping_pong,num_sports_attending,attendance_ratio,confirmation_status
 Magnificent Barracuda,MPE,False,True,True,True,True,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,True,True,True,True,True,True,8,0,False,Team A,,1,,,1,3,R,3,3,R,07,6,0.75,True
 Damaged Fly,MPE,False,True,False,True,True,True,True,False,False,True,True,False,False,False,False,False,False,True,True,True,True,True,True,True,True,True,True,7,0,False,Team A,R,,R,,,,1,2,R,4,02,4,0.5714285714285714,True
-Cool Weasel,USM,False,True,True,False,True,False,False,False,False,True,True,True,True,True,True,True,True,False,False,False,False,False,False,True,True,True,True,6,0,False,Team A,,,2,2,R,R,,,,,06,4,0.6666666666666666,False
-Motherly Woodpecker,MPE,False,True,True,True,True,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,False,False,False,False,True,True,6,0,False,Team A,,R,,,R,2,1,R,,,14,4,0.6666666666666666,True
+Cool Weasel,USM,False,True,True,False,True,False,False,False,False,True,True,True,True,True,True,True,True,False,False,False,False,False,False,True,True,True,True,6,0,False,Team A,,,2,2,R,R,,,,,06,3,0.5,False
+Motherly Woodpecker,MPE,False,True,True,True,True,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,False,False,False,False,True,True,6,0,False,Team A,,R,,,R,2,1,R,,,14,3,0.5,True
 Nutty Sheep,MPE,False,True,False,True,True,False,False,True,True,True,True,False,False,False,False,False,False,True,True,True,True,False,False,False,False,True,True,5,0,False,Team A,,R,,,,,1,R,,,16,2,0.4,True
 Dishonest Fangtooth,MPA,False,False,True,True,True,True,False,False,False,False,False,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,5,1,False,Team A,R,,,,1,,,1,R,3,13,4,0.8,True
 Lovely Heron,MPE,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,True,True,True,True,True,True,True,True,True,True,5,0,True,Team A,,,,,,,R,1,3,R,01,3,0.6,True
@@ -18,7 +18,7 @@ Awesome Wolverine,USM,False,True,False,False,True,True,True,False,False,False,Fa
 Marvelous Opossum,ESO,False,False,True,False,True,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,True,True,True,True,False,False,3,0,False,Team A,,,,,,,,,,,,0,0.0,True
 Ignorant Lemur,MPE,False,True,False,False,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,3,0,False,Team A,1,,,,,,,,3,,11,3,1.0,True
 Assured Flamingo,IPP,True,True,False,True,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,2,0,False,Team A,,,1,,,,,4,,,,2,1.0,True
-Amusing Seal,ESO,False,True,False,True,True,False,False,False,False,True,True,False,False,False,False,False,False,True,True,True,True,False,False,True,True,False,False,4,0,False,Team A,,,1,,,,R,,,2,,4,1.0,True
+Amusing Seal,ESO,False,True,False,True,True,False,False,False,False,True,True,False,False,False,False,False,False,True,True,True,True,False,False,True,True,False,False,4,0,False,Team A,,,1,,,,R,,,2,,2,0.5,True
 Revolving Coelacanth,MPA,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,2,0,False,Team A,1,,,,,,,,,,03,2,1.0,True
 Far Chamois,MPA,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,True,True,False,False,2,0,False,Team A,,,,,,,1,,,3,,2,1.0,True
 Honorable Pangolin,MPE,False,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,2,0,False,Team A,,,,,,,,,1,,12,2,1.0,True
@@ -32,5 +32,6 @@ Frail Skunk,IPP,True,True,False,False,False,True,True,False,False,False,False,Fa
 Another Macaw,ESO,False,False,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,1,0,False,Team A,,,,,,,,,,,,0,0.0,True
 Spanish Ferret,USM,False,True,True,True,False,False,False,False,False,False,False,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,2,0,True,Team A,,,,,1,,,,,,,1,0.5,True
 Realistic Coral,IPP,True,False,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,1,0,True,Team A,,,,,1,,,,,,,1,1.0,True
-Staid Hornbill,IPP,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,False,False,False,False,3,0,True,Team A,,,,,,,1,,2,,,1,0.3333333333333333,True
-Miserable Alligator,MPE,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,2,0,True,Team A,,,,,,,,,R,,17,0,0.0,True
+Staid Hornbill,IPP,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,False,False,False,False,3,0,True,Team A,,,,,,,1,,2,,,2,0.6666666666666666,True
+Miserable Alligator,MPE,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,2,0,True,Team A,,,,,,,,,R,,17,1,0.5,True
+Worldly Discus,MPA,False,False,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,1,0,True,Team A,,,,,,,,,,,18,0,0.0,True
