@@ -31,7 +31,7 @@ Disloyal Hagfish,MPE,False,True,True,True,True,False,False,False,False,False,Fal
 Separate Akbash,ESO,False,False,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,1,0,False,Team C,,,,,1,,,,,,,1,1.0,True
 Alarmed Bird,MPE,True,True,True,True,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,3,0,False,Team C,R,1,R,,,,,,,,,1,0.3333333333333333,True
 Earnest Snail,MPA,False,True,False,False,True,False,False,False,False,False,False,False,False,True,False,False,False,False,False,False,False,True,True,False,False,False,False,1,1,False,Team C,R,,,,,,,,,,,0,0.0,True
-Loving Bichir,IPP,False,True,True,True,True,True,True,False,False,False,False,False,False,True,True,False,False,True,True,False,False,False,False,False,False,False,False,3,0,True,Team C,R,,,,1,,R,,,,,1,0.3333333333333333,True
+Loving Bichir,IPP,False,True,True,True,True,True,True,False,False,False,False,False,False,True,True,False,False,True,True,False,False,False,False,False,False,False,False,3,0,True,Team C,1,,,,1,,R,,,,,1,0.3333333333333333,True
 Thorny Warthog,USM,False,True,True,False,False,False,False,True,True,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,2,0,True,Team C,,1,,,1,,,,,,,2,1.0,True
 Illiterate Caterpillar,MPE,False,False,False,False,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,1,0,True,Team C,,,,,,,,,1,1,,2,2.0,True
 Probable Herring,MPE,True,True,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,1,0,True,Team C,,,1,,,,,,,,,1,1.0,True
