@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rydellet@MPA-Garching.MPG.DE \n",
+      " worldly_discus.png \n",
+      "Sports week (Apr 29 - May 3): Your schedule and information\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def get_email_text_for_player(player: pd.Series) -> tuple[str, str, Path]:\n",
@@ -61,8 +71,8 @@
     "\n",
     "# player = df.loc[\"Thankful Kakapo\"]\n",
     "# address, text, fpath = get_email_text_for_player(player)\n",
-    "email, text, fpath = get_email_text_for_player(df.loc[\"Infamous Sawfish\"])\n",
-    "# print(email, \"\\n\", fpath.name, \"\\nSports week (Apr 29 - May 3): Your schedule and information\")\n",
+    "email, text, fpath = get_email_text_for_player(df.loc[\"Worldly Discus\"])\n",
+    "print(email, \"\\n\", fpath.name, \"\\nSports week (Apr 29 - May 3): Your schedule and information\")\n",
     "hf.copy_to_clipboard(text)\n"
    ]
   },
